data/forge_javadoc/1.12.2/raw/net/minecraft/entity/EntityAgeable.md
---
title: "EntityAgeable"
description: "public abstract class EntityAgeable extends EntityCreature"
package: "net/minecraft/entity"
version: "1.12.2"
forgeBuild: "14.23.5.2859"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.12.2-14.23.5.2859/net/minecraft/entity/EntityAgeable.html"
sourceType: javadoc
---

# EntityAgeable

**Inheritance:** java.lang.Object → net.minecraft.entity.Entity → net.minecraft.entity.EntityLivingBase → net.minecraft.entity.EntityLiving → net.minecraft.entity.EntityCreature → net.minecraft.entity.EntityAgeable

## Class signature

```java
public abstract class EntityAgeable extends EntityCreature
```

## Constructors

- `EntityAgeable(World worldIn)`

## Methods

- `void addGrowth(int growth)`
- `void ageUp(int growthSeconds, boolean updateForcedAge)`
- `abstract EntityAgeable createChild(EntityAgeable ageable)`
- `protected void entityInit()`
- `int getGrowingAge()`
- `protected boolean holdingSpawnEggOfClass(ItemStack stack, java.lang.Class<? extends Entity> entityClass)`
- `boolean isChild()`
- `void notifyDataManagerChange(DataParameter<?> key)`
- `protected void onGrowingAdult()`
- `void onLivingUpdate()`
- `boolean processInteract(EntityPlayer player, EnumHand hand)`
- `void readEntityFromNBT(NBTTagCompound compound)`
- `void setGrowingAge(int age)`
- `protected void setScale(float scale)`
- `void setScaleForAge(boolean child)`
- `protected void setSize(float width, float height)`
- `void writeEntityToNBT(NBTTagCompound compound)`

## Fields

- `protected int forcedAge`
- `protected int forcedAgeTimer`
- `protected int growingAge`
